# cloud-leopard-secure-center

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  RELEASE.md  config.example.toml  deny.toml  docker-compose.yml  rust-toolchain.toml
.github/: renovate.json
.github/workflows/: buf-breaking.yml  ci.yml
apps/migration-cli/: Cargo.toml  README.md
apps/migration-cli/src/: main.rs
apps/migration-cli/tests/: migrate.rs
apps/security-platform/: Cargo.toml  README.md
apps/security-platform/src/: main.rs
apps/security-platform/tests/: authenticate.rs  authorization.rs  iam004.rs  phase1_acceptance.rs  session.rs
crates/application/: Cargo.toml  README.md
crates/application/src/: api_key.rs  auth.rs  authenticate.rs  authorization.rs  config.rs  device.rs  lib.rs  media.rs  mfa.rs  organization.rs  role.rs  session.rs  tenant.rs  token_service.rs  usecase.rs  user.rs
crates/application/tests/: usecase_template.rs
crates/cluster-adapter/: Cargo.toml
crates/cluster-adapter/src/: assembly.rs  lib.rs
crates/domain-alarm/: Cargo.toml
crates/domain-alarm/src/: lib.rs  linkage.rs  notification.rs
crates/domain-audit/: Cargo.toml  README.md
crates/domain-audit/src/: audit_record.rs  lib.rs  retention.rs
crates/domain-authorization/: Cargo.toml  README.md
crates/domain-configuration/: Cargo.toml  README.md
crates/domain-configuration/src/: config_definition.rs  config_value.rs  lib.rs
crates/domain-identity/: Cargo.toml  README.md
crates/domain-identity/src/: api_key.rs  assurance.rs  auth.rs  credential.rs  lib.rs  mfa.rs  password.rs  session.rs  tenant.rs  token.rs  totp.rs  user.rs
crates/domain-media/: Cargo.toml
crates/domain-media/src/: lib.rs
crates/domain-organization/: Cargo.toml  README.md
crates/domain-resource/: Cargo.toml  README.md
crates/domain-resource/src/: camera.rs  device.rs  external_binding.rs  lib.rs  projection.rs  tag.rs
crates/domain-signaling/: Cargo.toml
crates/domain-signaling/src/: dto.rs  lib.rs  mapper.rs  tests.rs
crates/foundation/: Cargo.toml  README.md
crates/foundation/src/: config.rs  lib.rs  retry.rs
crates/http-api/: Cargo.toml  README.md  openapi.json
crates/http-api/src/: auth.rs  client_ip.rs  context.rs  dto.rs  error.rs  etag.rs  idempotency.rs  lib.rs  middleware.rs  openapi.rs  pagination.rs  rate_limit.rs  routes.rs  sse.rs
crates/http-api/tests/: api002.rs  api003.rs  error_and_middleware.rs
crates/message-api/: Cargo.toml  README.md
crates/message-local/: Cargo.toml  README.md
crates/message-local/src/: lib.rs
crates/nats-adapter/: Cargo.toml
crates/nats-adapter/src/: lib.rs
crates/observability/: Cargo.toml  README.md
crates/plugin-adapter/: Cargo.toml
crates/release-ops/: Cargo.toml
crates/signaling-adapter/: Cargo.toml
crates/signaling-adapter/src/: event.rs  jetstream.rs  lib.rs  reconciler.rs  worker.rs
crates/storage-api/: Cargo.toml  README.md
crates/storage-api/src/: lib.rs
crates/storage-postgres/: Cargo.toml  README.md
crates/storage-postgres/src/: api_key_repository.rs  audit_writer.rs  camera_repository.rs  configuration_repository.rs  credential_repository.rs  device_repository.rs  external_binding_repository.rs  idempotency_repository.rs  inbox_repository.rs  job_repository.rs  lib.rs  login_attempt_repository.rs  mfa_repository.rs  organization_unit_repository.rs  outbox_repository.rs  projection_repository.rs  retention_repository.rs  role_binding_repository.rs  role_repository.rs  session_repository.rs  spatial_repository.rs  tag_repository.rs  tenant_repository.rs  unit_of_work.rs  user_repository.rs
crates/storage-postgres/tests/: audit_writer.rs  configuration_repository.rs  idempotency_outbox_repository.rs  inbox_job_repository.rs  organization_unit_repository.rs  partition.rs  projection_repository.rs  resource_repository.rs  retention_repository.rs  rls.rs  role_binding_repository.rs  role_repository.rs  spatial_repository.rs  tag_binding_repository.rs  tenant_repository.rs  unit_of_work.rs  user_repository.rs
crates/testing/: Cargo.toml
crates/testing/src/: chaos.rs  contract_suite.rs  fixtures.rs  lib.rs  performance.rs
dev-docs/001_vibe_coding_plan/: 01_execution_contract_and_baseline.md  02_workspace_toolchain_and_ci.md  03_architecture_crate_graph.md  04_foundation_types_errors_config.md  05_postgres_migrations_rls.md  06_identity_and_sessions.md  07_organization_and_spatial_tree.md  08_authorization_rbac_scope.md  09_resource_catalog_bindings_projection.md  10_audit_configuration_secret.md  11_application_uow_outbox_jobs.md  (+15 more)
docs/: system-design.md
migrations/: 00000000000001_expand_create_schemas_and_roles.sql  00000000000002_expand_create_iam_tenants.sql  00000000000003_expand_rls_and_tenant_context.sql  00000000000004_expand_partitioned_audit_and_login_tables.sql  00000000000005_expand_create_iam_users_and_identities.sql  00000000000006_expand_credentials_and_login_indexes.sql  00000000000007_expand_refresh_tokens.sql  00000000000008_expand_api_keys_and_mfa.sql  00000000000009_expand_org_tenants.sql  00000000000010_expand_org_organization_units.sql  00000000000011_expand_org_spatial_tree.sql  00000000000012_expand_auth_roles.sql  00000000000013_expand_authz_role_bindings.sql  00000000000014_expand_resource_devices_cameras.sql  00000000000015_expand_resource_tags_bindings.sql  00000000000016_expand_projection.sql  00000000000017_expand_audit_records.sql  00000000000018_expand_configuration.sql  00000000000019_expand_retention.sql  00000000000020_expand_idempotency_outbox.sql  00000000000021_expand_inbox_jobs.sql  00000000000022_retention_max_batch_size.sql  00000000000023_add_platform_role_permissions.sql  00000000000024_add_platform_config_permissions.sql
proto/: buf.yaml
scripts/: preinstall-check.sh  release-gate.sh  verify_pg_dump_restore.sh
tools/architecture-test/: Cargo.toml
tools/architecture-test/src/: main.rs
tools/plan-check/: Cargo.toml
tools/plan-check/src/: main.rs
web/: .gitignore  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs
(+108 files in other folders)
