[package]
name = "migration-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[lints]
workspace = true

[dependencies]
storage-postgres = { path = "../../crates/storage-postgres" }
foundation = { path = "../../crates/foundation" }
tokio = { version = "=1.52.3", features = ["full"] }

[dev-dependencies]
sqlx = { version = "=0.9.0", default-features = false, features = ["runtime-tokio", "tls-none", "postgres", "migrate", "macros", "chrono", "uuid"] }
