[package]
name = "security-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[lints]
workspace = true

[dependencies]
application = { path = "../../crates/application" }
http-api = { path = "../../crates/http-api" }
observability = { path = "../../crates/observability" }
foundation = { path = "../../crates/foundation" }

[dev-dependencies]
domain-identity = { path = "../../crates/domain-identity" }
storage-api = { path = "../../crates/storage-api" }
storage-postgres = { path = "../../crates/storage-postgres" }
tokio = { version = "=1.52.3", features = ["full"] }
sqlx = { version = "=0.9.0", default-features = false, features = ["runtime-tokio", "tls-none", "postgres", "migrate", "macros", "chrono", "uuid"] }
