[package]
name = "security-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[lints]
workspace = true

[dependencies]
application = { path = "../../crates/application" }
http-api = { path = "../../crates/http-api" }
observability = { path = "../../crates/observability" }
foundation = { path = "../../crates/foundation" }
axum = "=0.8.9"
tokio = { version = "=1.52.3", features = ["full"] }
tower-http = { version = "=0.6.8", features = ["fs", "trace"] }

[dev-dependencies]
domain-authorization = { path = "../../crates/domain-authorization" }
domain-identity = { path = "../../crates/domain-identity" }
domain-media = { path = "../../crates/domain-media" }
domain-organization = { path = "../../crates/domain-organization" }
domain-signaling = { path = "../../crates/domain-signaling" }
storage-api = { path = "../../crates/storage-api" }
storage-postgres = { path = "../../crates/storage-postgres" }
signaling-adapter = { path = "../../crates/signaling-adapter" }
serde_json = { version = "=1.0.151" }
tokio = { version = "=1.52.3", features = ["full"] }
sqlx = { version = "=0.9.0", default-features = false, features = ["runtime-tokio", "tls-none", "postgres", "migrate", "macros", "chrono", "uuid"] }
