[package]
name = "application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
domain-identity = { path = "../domain-identity" }
domain-organization = { path = "../domain-organization" }
domain-authorization = { path = "../domain-authorization" }
domain-resource = { path = "../domain-resource" }
domain-audit = { path = "../domain-audit" }
domain-configuration = { path = "../domain-configuration" }
storage-api = { path = "../storage-api" }
message-api = { path = "../message-api" }
foundation = { path = "../foundation" }
base64ct = "=1.8.3"
hmac = "=0.13.0"
serde_json = "=1.0.151"
sha2 = "=0.11.0"