[package]
name = "cluster-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { version = "=0.1.89" }
foundation = { path = "../foundation" }
serde = { version = "=1.0.228", features = ["derive"] }
thiserror = { version = "=2.0.18" }

[dev-dependencies]
tokio = { version = "=1.52.3", features = ["macros", "rt"] }
