[package]
name = "domain-alarm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { version = "=0.1.89" }
foundation = { path = "../foundation" }
futures = { version = "=0.3.31" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.151" }
thiserror = { version = "=2.0.18" }

[dev-dependencies]
serde_json = { version = "=1.0.151" }
