[package]
name = "domain-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
chrono = "=0.4.45"
foundation = { path = "../foundation" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.151"