[package]
name = "domain-configuration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
foundation = { path = "../foundation" }
humantime = "=2.1.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.151"