[package]
name = "domain-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
foundation = { path = "../foundation" }
thiserror = "=2.0.18"
argon2 = "=0.5.3"
rand_core = { version = "=0.6.4", features = ["getrandom"] }
serde = { version = "=1.0.228", features = ["derive"] }