[package]
name = "domain-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
foundation = { path = "../foundation" }
thiserror = "=2.0.18"
argon2 = "=0.5.3"
serde = { version = "=1.0.228", features = ["derive"] }
base64ct = "=1.8.3"
hmac = "=0.13.0"
sha1 = "=0.11.0"
sha2 = "=0.11.0"
subtle = "=2.6.1"
ipnet = "=2.11.0"