[package]
name = "domain-resource"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
domain-organization = { path = "../domain-organization" }
foundation = { path = "../foundation" }