[package]
name = "foundation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
getrandom = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
uuid = { version = "1.23.0", features = ["v7", "serde"] }
zeroize = { version = "1.9.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"
