[package]
name = "http-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
application = { path = "../application" }
foundation = { path = "../foundation" }
