[package]
name = "http-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
application = { path = "../application" }
domain-audit = { path = "../domain-audit" }
domain-authorization = { path = "../domain-authorization" }
domain-configuration = { path = "../domain-configuration" }
domain-identity = { path = "../domain-identity" }
domain-organization = { path = "../domain-organization" }
domain-resource = { path = "../domain-resource" }
foundation = { path = "../foundation" }
async-trait = "=0.1.89"
axum = { version = "=0.8.9", default-features = false, features = ["tokio", "http1", "json", "query", "form"] }
chrono = { version = "=0.4.45", features = ["serde"] }
http = "=1.4.2"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.151"
thiserror = "=2.0.18"
tower = { version = "=0.5.2", features = ["timeout"] }
tower-http = { version = "=0.6.8", features = ["cors", "trace", "timeout", "limit", "request-id", "set-header", "normalize-path"] }
utoipa = { version = "=5.5.0", features = ["axum_extras"] }
uuid = { version = "=1.23.0", features = ["serde", "v7"] }

[dev-dependencies]
tokio = { version = "=1.52.3", features = ["full"] }
