[package]
name = "message-local"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
message-api = { path = "../message-api" }
foundation = { path = "../foundation" }