[package]
name = "nats-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { version = "=0.1.89" }
foundation = { path = "../foundation" }
futures = { version = "=0.3.31" }
message-api = { path = "../message-api" }

[dev-dependencies]
tokio = { version = "=1.52.3", features = ["macros", "rt"] }
