[package]
name = "signaling-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[lints]
workspace = true

[dependencies]
foundation = { path = "../foundation" }
domain-resource = { path = "../domain-resource" }
domain-signaling = { path = "../domain-signaling" }
storage-api = { path = "../storage-api" }
async-trait = "=0.1.89"
futures = "=0.3.31"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.151"

[dev-dependencies]
futures = "=0.3.31"
