[package]
name = "storage-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
foundation = { path = "../foundation" }
domain-identity = { path = "../domain-identity" }
async-trait = "=0.1.89"