[package]
name = "storage-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
storage-api = { path = "../storage-api" }
domain-audit = { path = "../domain-audit" }
domain-authorization = { path = "../domain-authorization" }
domain-configuration = { path = "../domain-configuration" }
domain-identity = { path = "../domain-identity" }
domain-organization = { path = "../domain-organization" }
domain-resource = { path = "../domain-resource" }
foundation = { path = "../foundation" }
async-trait = "=0.1.89"
serde_json = "=1.0.151"
sqlx = { version = "=0.9.0", default-features = false, features = ["runtime-tokio", "tls-none", "postgres", "migrate", "macros", "chrono", "uuid"] }

[dev-dependencies]
tokio = { version = "=1.52.3", features = ["full"] }