[package]
name = "architecture-test"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.1"
authors = ["ChungTak"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ChungTak/cloud-leopard-secure-center"
publish = false

[workspace]

[dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[dev-dependencies]
tempfile = "3.14.0"
