[package]
name = "plan-check"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.1"
authors = ["ChungTak"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ChungTak/cloud-leopard-secure-center"

[dependencies]
anyhow = "1.0.95"
regex = "1.11.1"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.14.0"